Use correct font family, alignment and size for various elements

--- a/web/cobrands/eastsussex/base.scss
+++ b/web/cobrands/eastsussex/base.scss
@@ -3,6 +3,8 @@
 @import "../sass/mixins";
 @import "compass";
 
+$heading-font: Arial, "Helvetica Neue", Helvetica, sans-serif !default;
+
 @import "../sass/base";
 
 body {
@@ -105,7 +107,7 @@ h1.main {
     }
 }
 
-#mysociety {
+.frontpage #mysociety #front-main-container {
     h1, h2 {
         text-align: center;
     }
@@ -172,4 +174,9 @@ button, input[type=submit], .btn {
 }
 .placeholder {
     font-style: normal;
+}
+
+
+#geolocate_link {
+    font-size: 1.0em;
 }
